--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
       <div class="carousel-item active">
         <img src="./imgs/photo 1.png" alt="Los Angeles" class="d-block" style="width:100%">
         <div class="carousel-caption">
-          <h3>Html5</h3>
+          <h3>HTML5</h3>
           <a href="#" class="btn btn-primary">Show full cuorse</a>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./imgs/photo2.jpg" alt="Chicago" class="d-block" style="width:100%">
         <div class="carousel-caption">
-          <h3>Css3</h3>
+          <h3>CSS3</h3>
       <a href="#" class="btn btn-primary">Show full cuorse</a>
 
         </div>
